feat: draft do exam feature
